fix sidebar coloring in dark mode

--- a/src/assets/css/colors.scss
+++ b/src/assets/css/colors.scss
@@ -35,7 +35,7 @@ $hue-danger: 2;
   --c-fg-t: var(--c-td);
   --c-fg-tl: var(--c-tdl);
   --c-bg: var(--c-g0);
-  --c-bg-t: var(--c-tl);
+  --c-bg-t: var(--c-tll);
   --c-bg-ta: var(--c-tdl);
 
   --shadow: 0px 1px 4px rgb(0 0 0 / 0.25);
@@ -45,7 +45,7 @@ $hue-danger: 2;
     --c-fg-t: var(--c-tl);
     --c-fg-tl: var(--c-tll);
     --c-bg: var(--c-g8);
-    --c-bg-t: var(--c-td);
+    --c-bg-t: var(--c-tdl);
     --c-bg-ta: var(--c-tll);
 
     --shadow: 0px 1px 4px rgb(0 0 0 / 0.5);
